package com.example.stickhero;

import javafx.application.Application;
import javafx.fxml.FXMLLoader;
import javafx.scene.Scene;
import javafx.stage.Stage;

import java.io.IOException;

import java.util.ArrayList;
import java.util.List;

// Interface for game objects
interface GameObject {
    int getPosition();
    int getSize();
}

// Represents the Cherry game object
class Cherry implements GameObject {
    private int position;
    private int size;
    private int points;

    // Constructor, getters, and setters for points
    // Implement GameObject interface methods
    @Override
    public int getPosition() {
        return position;
    }

    @Override
    public int getSize() {
        return size;
    }
}

// Represents the Stick game object
class Stick implements GameObject {
    private int length;

    public void extend() {
        // Implementation for stick extension
    }

    // Implement GameObject interface methods
    @Override
    public int getPosition() {
        // Implement as needed
        return 0;
    }

    @Override
    public int getSize() {
        // Implement as needed
        return 0;
    }
}

// Represents the Platform game object
class Platform implements GameObject {
    private int position;
    private int size;
    private int width;

    // Constructor, getters, and setters for width
    // Implement GameObject interface methods
    @Override
    public int getPosition() {
        return position;
    }

    @Override
    public int getSize() {
        return size;
    }
}

// Interface for characters that can collect rewards
interface RewardCollector {
    void flipCharacter();
}

// Represents the StickHero character
class StickHero implements GameObject, RewardCollector {
    private String player;
    private int score;
    private int cherries;
    private int revives;
    private int currentPlatform;
    private int highestScore;
    private int lastScore;

    public void startGame() {
        // Implementation for starting the game
    }

    public void endGame() {
        // Implementation for ending the game
    }

    public void mainMenu() throws IOException, GameClassNotFoundException {
        MainMenu menu = new MainMenu();
        try {
            menu.displayMenu();
            // Additional logic for handling the main menu
        } catch (Exception e) {
            if (e instanceof GameClassNotFoundException) {
                // Handle GameClassNotFoundException here
                throw (GameClassNotFoundException) e;
            } else if (e instanceof IOException) {
                // Handle IOException here
                throw new IOException("An IOException occurred: " + e.getMessage(), e);
            } else {
                // Handle other exceptions or rethrow as needed
                throw e;
            }
        }
    }

    public void pauseGameMenu() throws GameCannotBeRestartedException {
        PauseGameMenu menu = new PauseGameMenu();
        try {
            menu.displayMenu();
            // Additional logic for handling the pause menu
            if (gameCannotBeRestarted()) {
                throw new GameCannotBeRestartedException("The game cannot be restarted at this point.");
            }
        } catch (GameCannotBeRestartedException e) {
            // Handle GameCannotBeRestartedException here
            throw e; // Rethrow the exception if needed
        }
    }

    private boolean gameCannotBeRestarted() {
        // Implement logic to check if the game cannot be restarted
        return true; // Example, adjust as needed
    }

    public void revivePlayer() {
        // Implementation for reviving the player using cherries
    }

    public void flipCharacter() {
        // Implementation for flipping the character to collect rewards
    }

    // Implement GameObject interface methods
    @Override
    public int getPosition() {
        return currentPlatform; // Example, adjust as needed
    }

    @Override
    public int getSize() {
        // Implement as needed
        return 0;
    }
}

// Exception for indicating that the game cannot be restarted
class GameCannotBeRestartedException extends Exception {
    public GameCannotBeRestartedException(String message) {
        super(message);
    }
}

// Exception for indicating that the game class was not found
class GameClassNotFoundException extends Exception {
    public GameClassNotFoundException(String message, Throwable cause) {
        super(message, cause);
    }
}

// Represents the overall game state and mechanics
class Game {
    private int currentLevel;
    private List<GameObject> gameObjList;

    public void game() {
        // Implementation for the main game loop and mechanics
    }

    public void cherryCollected() {
        // Implementation for handling cherry collection
    }

    public void revivePlayer() {
        // Implementation for reviving the player in the game
    }

    // Other getters and setters
}

// Interface for menus
interface Menu {
    void displayMenu();
    void curGame();
}

// Represents the Pause Game Menu
class PauseGameMenu implements Menu {
    public void displayMenu() {
        // Implementation for displaying the pause game menu
        System.out.println("Pause Game Menu");
    }

    public void resumeGame() {
        // Implementation for resuming the game
    }

    public void options() {
        // Implementation for displaying options
    }

    @Override
    public void curGame() {
        // Implementation for curGame in PauseGameMenu
        System.out.println("Current Game State from Pause Menu");
    }
}

// Represents the Main Menu
class MainMenu implements Menu {
    public void displayMenu() {
        // Implementation for displaying the main menu
        System.out.println("Main Menu");
    }

    public void startNewGame() {
        // Implementation for starting a new game
    }

    public void loadGame() {
        // Implementation for loading a saved game
    }

    public void exitGame() {
        // Implementation for exiting the game
    }

    @Override
    public void curGame() {
        // Implementation for curGame in MainMenu
        System.out.println("Current Game State from Main Menu");
    }
}

// Represents the Game End Menu
class GameEndMenu implements Menu {
    public void displayMenu() {
        // Implementation for displaying the game end menu
        System.out.println("Game End Menu");
    }

    public void showScore() {
        // Implementation for displaying the final score
    }

    public void returnToMainMenu() {
        // Implementation for returning to the main menu after the game ends
    }

    @Override
    public void curGame() {
        // Implementation for curGame in GameEndMenu
        System.out.println("Current Game State from Game End Menu");
    }
}


public class HelloApplication extends Application {
    @Override
    public void start(Stage stage) throws IOException {
        FXMLLoader fxmlLoader = new FXMLLoader(HelloApplication.class.getResource("hello-view.fxml"));
        Scene scene = new Scene(fxmlLoader.load(), 680, 440);
        stage.setTitle("Hello!");
        stage.setScene(scene);
        stage.show();
    }
    public static void main(String[] args) {
        launch();
    }
}